--- a/contact.html
+++ b/contact.html
@@ -174,7 +174,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-4 footer-item">
-            <h4>Restaurant Website</h4>
+            <h4><span style="color: brown; font-size: 2rem;">G</span>obble<em style="font-style: normal; color: burlywood; text-transform: uppercase;">It</em></h4>
             <p>Whether you are looking for a special lunch to reward your team for its hard work, or to impress an important client with a perfect dinner in your home, GobbleIt can cater events from 5 to 500 guests.</p>
             <ul class="social-icons">
               <li><a rel="nofollow" href="#" target="_blank"><i class="fa fa-facebook"></i></a></li>
